--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -49,7 +49,7 @@
       {{ block "main" . }}{{ end }}
     </main>
     <footer>
-      {{ partial "custom_footer.html" . }}
+      {{ partial (printf "custom_footer.%s.html" .Site.LanguageCode) . }}
       {{ partial "footer.html" . }}
     </footer>
 
