--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,6 @@
 {{ if not .Site.Params.hideMadeWithLine }}
   <span>
     {{ if .Site.Copyright }}|{{ end }}
-    {{ T "made_with" }}
-    <a href="https://github.com/maolonglong/hugo-simple/">Hugo ʕ•ᴥ•ʔ Simple</a>
+    {{ markdownify .Site.Params.madeWith }}
   </span>
 {{ end }}
